html & css alterados

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Olá Will</h1>
+    <p>Estamos estudando HTML & CSS para evoluirmos juntos!</p>
     <button type="button"><a href="https://www.toyota.com.br/">Toyota do Will</a></button>
 </html>
